@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.61 2005/01/30 08:06:38 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.62 2005/01/30 20:56:37 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   30 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Deleting and recreating swap doesn't cause nastiness anymore.
+  Deleting and recreating swap doesn't cause nastiness anymore. Switched
+  to dynamically creating color key blocks.
 
   29 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Shell for partition properties dialog. Added "working" Ok and Cancel
